--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,9 @@ body {
     border-radius: 5px;
   }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+  }
