--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,18 @@ body {
     align-items: center;
     margin-bottom: 20px;
   }
+
+  .btn{
+    display: inline-block;
+    background:green;
+    color:white;
+    border:none;
+    padding: 10px 20px;
+    margin: 5px;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+    font-size: 15px;
+    font-family: inherit;
+  }
+  
