--- a/src/index.css
+++ b/src/index.css
@@ -60,3 +60,18 @@ body {
     cursor: pointer;
   }
 
+  .task.reminder{
+    border-left: 5px solid green;
+  }
+  
+  .task h3{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .add-form{
+    margin-bottom: 40px;
+  }
+
+
