--- a/src/index.css
+++ b/src/index.css
@@ -74,4 +74,12 @@ body {
     margin-bottom: 40px;
   }
 
+  .form-control{
+    margin:20px 0;
+  }
+  
+  .form-control label{
+    display: block;
+  }
+
 
